--- a/thesis.bib
+++ b/thesis.bib
@@ -220,6 +220,16 @@
   abstract = {Site-specific management of cotton (Gossypium hirsutum) cropping systems at the production-scale requires information regarding environmental interactions across the landscape. Landscape-scale cotton models could track these interactions and be integrated into future decision support tools designed to manage variable inputs; however, modeling of cotton systems across the landscape has not been evaluated. Cotton production in the Southern Texas High Plains is dependent on irrigation from the Ogallala Aquifer, and thus tracking soil water content across fields could help producers plan their use of diminishing aquifer resources. Our hypothesis was that the PALMScot model, a grid-based landscape-scale cotton model, would capture spatial and temporal variability and environmental interactions affecting soil water and plant growth within a 70-ha field throughout two contrasting growing seasons, without adjustment of input parameters for the model. Thus, our objective was to compare values of soil water content and crop height calculated by the PALMScot model with corresponding field measured values at multiple locations across a fine textured, pivot irrigated production cotton field during two growing seasons. The PALMScot model calculated values of soil water and crop height across the field with a root mean squared deviation (RMSD) for soil water content in the 1.0-m profile {$\leq$}0.032~m3/m3 and most Nash\textendash Sutcliffe efficiency (NSE) values {$\geq$}0.48. Values of RMSD for crop height were {$\leq$}0.10~m at all locations in 2010 and 2011. We conclude that PALMScot correctly and efficiently calculated soil water content and crop height across the field, throughout each season, and the model has potential as a site-specific management tool for cotton cropping systems.}
 }
 
+@book{chankong1983,
+  title = {Multiobjective Decision Making : Theory and Methodology},
+  author = {Chankong, Vira and Haimes, Yacov Yosseph},
+  date = {1983},
+  publisher = {{New York (N.Y.) : North-Holland}},
+  url = {http://lib.ugent.be/catalog/rug01:000485253},
+  isbn = {0-444-00710-5},
+  langid = {english}
+}
+
 @thesis{chen2006,
   type = {博士},
   title = {棉花生长模拟与决策支持系统研究},
@@ -279,6 +289,18 @@
   langid = {english},
   keywords = {competition,concentration reduction hypothesis,CSR hypothesis,disturbance,plant strategies,stress},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2745.2005.01043.x}
+}
+
+@article{das&dennis2000,
+  title = {Normal-{{Boundary Intersection}}: {{A New Method}} for {{Generating}} the {{Pareto Surface}} in {{Nonlinear Multicriteria Optimization Problems}}},
+  shorttitle = {Normal-{{Boundary Intersection}}},
+  author = {Das, Indraneel and Dennis, J.},
+  date = {2000-07-12},
+  journaltitle = {SIAM Journal on Optimization},
+  shortjournal = {SIAM Journal on Optimization},
+  volume = {8},
+  doi = {10.1137/S1052623496307510},
+  abstract = {This paper proposes an alternate method for finding several Pareto optimal points for a general nonlinear multicriteria optimization problem. Such points collectively capture the trade-off among the various conflicting objectives. It is proved that this method is independent of the relative scales of the functions and is successful in producing an evenly distributed set of points in the Pareto set given an evenly distributed set of parameters, a property which the popular method of minimizing weighted combinations of objective functions lacks. Further, this method can handle more than two objectives while retaining the computational efficiency of continuation-type algorithms. This is an improvement over continuation techniques for tracing the trade-off curve since continuation strategies cannot easily be extended to handle more than two objectives. This research was partially supported by the Dept. of Energy, DOE Grant DE-FG03-95ER25257, the Air Force, Air Force Grant F49620-95-1-021...}
 }
 
 @article{dewit25YearsWOFOST2019,
@@ -595,6 +617,19 @@
   abstract = {A new version of the GRAMI crop model capable of being calibrated within season was developed and tested for cotton (Gossypium hirsutum L.) production in semiarid regions. The model was first verified using field data obtained at Halfway, TX, USA in 2002. The model was then validated using data sets obtained at Lamesa, TX in 1999 and 2001 and at Lubbock, TX in 2002 and 2004. Simulated values of cotton growth and lint yield showed reasonable agreement with corresponding measurements under irrigated conditions. The new model not only has simple input requirements but is also easy to use. Thus, it promises to have applicability to be expanded to other semiarid regions for irrigated cotton production and to have applicability to regional cotton growth monitoring and lint yield mapping projects.},
   langid = {english},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.2134/agronj2004.0267}
+}
+
+@article{kung1975,
+  title = {On {{Finding}} the {{Maxima}} of a {{Set}} of {{Vectors}}},
+  author = {Kung, H. T. and Luccio, F. and Preparata, F. P.},
+  date = {1975-10-01},
+  journaltitle = {Journal of the ACM},
+  shortjournal = {J. ACM},
+  volume = {22},
+  number = {4},
+  pages = {469--476},
+  issn = {0004-5411},
+  doi = {10.1145/321906.321910}
 }
 
 @unpublished{lambert1976,
