--- a/thesis.tex
+++ b/thesis.tex
@@ -12,6 +12,9 @@
 \usepackage{setspace}
 \usepackage{siunitx}
 \usepackage{tikz}
+\usepackage{tikz-3dplot}
+\usepackage{pgfplots}
+\usepackage{xfp}
 
 \geometry{left=2.5cm,right=2.5cm,top=3cm,bottom=2.5cm}
 \newCJKfontfamily{\huawenxingkai}[AutoFakeBold = {1.1}]{STXingkai}
