FIX: das&dennis1998

--- a/thesis.bib
+++ b/thesis.bib
@@ -291,16 +291,21 @@
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2745.2005.01043.x}
 }
 
-@article{das&dennis2000,
+@article{das&dennis1998,
   title = {Normal-{{Boundary Intersection}}: {{A New Method}} for {{Generating}} the {{Pareto Surface}} in {{Nonlinear Multicriteria Optimization Problems}}},
   shorttitle = {Normal-{{Boundary Intersection}}},
-  author = {Das, Indraneel and Dennis, J.},
-  date = {2000-07-12},
+  author = {Das, Indraneel and Dennis, J. E.},
+  date = {1998-08},
   journaltitle = {SIAM Journal on Optimization},
-  shortjournal = {SIAM Journal on Optimization},
+  shortjournal = {SIAM J. Optim.},
   volume = {8},
+  number = {3},
+  pages = {631--657},
+  publisher = {{Society for Industrial and Applied Mathematics}},
+  issn = {1052-6234},
   doi = {10.1137/S1052623496307510},
-  abstract = {This paper proposes an alternate method for finding several Pareto optimal points for a general nonlinear multicriteria optimization problem. Such points collectively capture the trade-off among the various conflicting objectives. It is proved that this method is independent of the relative scales of the functions and is successful in producing an evenly distributed set of points in the Pareto set given an evenly distributed set of parameters, a property which the popular method of minimizing weighted combinations of objective functions lacks. Further, this method can handle more than two objectives while retaining the computational efficiency of continuation-type algorithms. This is an improvement over continuation techniques for tracing the trade-off curve since continuation strategies cannot easily be extended to handle more than two objectives. This research was partially supported by the Dept. of Energy, DOE Grant DE-FG03-95ER25257, the Air Force, Air Force Grant F49620-95-1-021...}
+  abstract = {This paper proposes an alternate method for finding several Pareto optimal points for a general nonlinear multicriteria optimization problem. Such points collectively capture the trade-off among the various conflicting objectives. It is proved that this method is independent of the relative scales of the functions and is successful in producing an evenly distributed set of points in the Pareto set given an evenly distributed set of parameters, a property which the popular method of minimizing weighted combinations of objective functions lacks. Further, this method can handle more than two objectives while retaining the computational efficiency of continuation-type algorithms. This is an improvement over continuation techniques for tracing the trade-off curve since continuation strategies cannot easily be extended to handle more than two objectives.},
+  keywords = {90C29,multicriteria optimization,multiobjective optimization,Pareto set,trade-off curve}
 }
 
 @article{dewit25YearsWOFOST2019,
