ADD: input conclusion

--- a/thesis.tex
+++ b/thesis.tex
@@ -62,5 +62,6 @@ decision/.style = {base, diamond, aspect=2},
 \input{method}
 \input{model}
 \input{result}
+\input{conclusion}
 \printbibliography
 \end{document}
