ADD: research_site.png

--- a/method.tex
+++ b/method.tex
@@ -47,6 +47,11 @@
 
 \section{实验观测}
 试验区位于南疆地区阿拉尔市塔里木大学灌溉试验站 (\ang{81;11;46}E, \ang{40;37;28}N)。
+\begin{figure}
+    \centering
+    \includegraphics[scale=0.4]{research_site.png}
+    \caption{试验站所在位置}
+\end{figure}
 灌溉实验按照田间实验设计，采用滴灌方式，根据 SWAP 模型\cite{swap2021}的精准灌溉工具，通过气象数据，土壤数据和棉花生长数据计算每日的实际蒸发蒸腾量 ($ET_c$)，按照水分需求进行灌溉。
 设计三个灌溉水平，标准亏损灌溉 75\% $ET_c$，90\% $ET_c$ 和 100\% $ET_c$。
 另外，设计一个经验灌溉水平，灌溉定额 $\mathrm{280 m^3 / 667m^2}$，生育期滴水总计 14 次。
