--- a/result.tex
+++ b/result.tex
@@ -2,9 +2,8 @@
 
 \begin{table}
     \label{tab:stats}
-    \caption{Analysis of variance results (F statistics and p values) and NRMSE for selected Pareto optimal solution from Cotton2K
-        simulations using two LI methodologies (original and modified). Statistically preferred method for each metric are highlighted
-        in bold.}
+    \caption{使用两种LI方法（原始的和修改的）从Cotton2K模拟中选择的帕累托最优解决方案的方差分析结果。\\每个指标的统计学上的首选方法以黑体字突出。}
+    \centering
     \begin{tabular}{lrlrr}
         \toprule
         Metric & F       & p-value   & Original        & Modified        \\
